fix: alignment at bottom in mSite for forget password

--- a/src/route/PasswordChangePage/PasswordChange.style.scss
+++ b/src/route/PasswordChangePage/PasswordChange.style.scss
@@ -2,6 +2,7 @@
   @include mobile {
     display: flex;
     margin: auto;
+    margin-bottom: 50px;
   }
 
   &-Wrapper {
